--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"/>
-        <link rel="stylesheet" href="./Assets/style.css" />
+        <link rel="stylesheet" href="./assests/css/styles.css" />
         <script defer src="https://kit.fontawesome.com/94a9fd42dd.js" crossorigin="anonymous"></script>
         <script defer src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-        <script defer src="./Assets/script.js"></script>
+        <script defer src="./assests/js/script.js"></script>
         <title>Weather Dashboard</title>
     </head>
 
