--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             <div class="col-lg-8 weather-container">
                 <div class="row">
                     <div class="col-12 text-center d-none" id="weatherNow">
+                        <div class="place row"> </div>
                         <div class="detail row"> </div>
                            
                     </div>
