added styling for uv index

--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
                 <div class="row">
                     <div class="col-12 text-center d-none" id="weatherNow">
                         <div class="place row"> </div>
-                        <div class="detail row"> </div>
+                        <div class="today row"> </div>
+                        <div class="forecastTitle row"> </div>
+                        <div class="forecast row"> </div>
                            
                     </div>
                 <div class="row text-center">
