added some bootstrap styling

--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
                 </div>
             </div>
             <div class="col-lg-8 weather-container">
-                <div class="row">
+                <div class="row" >
                     <div class="col-12 text-center d-none" id="weatherNow">
                         <div class="place row"> </div>
                         <div class="today row"> </div>
                         <div class="forecastTitle row"> </div>
-                        <div class="forecast row"> </div>
+                        <div class="forecast row justify-content-between"> </div>
                            
                     </div>
                 <div class="row text-center">
